@@ -14,6 +14,8 @@ ver 0.24 (not yet released)
   - proxy: require libmpdclient 2.15 or later
 * archive
   - add option to disable archive plugins in mpd.conf
+* storage
+  - curl: optimize database update
 * input
   - curl: add "connect_timeout" configuration
 * decoder
